--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hepsiburada",
   "version": "0.1.0",
+  "author": "Mustafa Cihat Gündüz",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
